Reapply overflow:hidden on #quiz to prevent animation weirdness, refs #116

--- a/loop/loop/static/src/scss/partials/_quiz.scss
+++ b/loop/loop/static/src/scss/partials/_quiz.scss
@@ -1,6 +1,7 @@
 /* Quiz */
 
 #quiz {
+    overflow: hidden;
     position: absolute;
     top: 0px;
     bottom: 0px;
